--- a/biografia/bio.html
+++ b/biografia/bio.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Héctor Couto</title>
+    <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
     <section class="sidebarleft">
@@ -34,7 +36,6 @@
     </section>
 
     <section class="pie">
-        <h1>Teminos y condiciones</h1>
         <p>Al entrar a esta pagina estas de acuerdo con los <a href="#">Terminos y condiciones.</a></p>
     </section>
     
