--- a/biografia/bio.html
+++ b/biografia/bio.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Héctor Couto</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
@@ -25,13 +26,13 @@
         <img src="../imagenes/banner2.jpg" alt="Hector Couto Playing Music" class="banner">
 
         <h1>Biografia</h1>
-        <p>Originario de las Islas Canarias (España), este joven productor y DJ, ha logrado evolucionar con el tiempo e innovar musicalmente con un estilo muy eclectico, fusionando muchos estilos y sonidos, pero siempre con un groove contundente, por el cual se caracteriza.
+        <p>Originario de las Islas Canarias (España), este joven productor y DJ, ha logrado evolucionar con el tiempo e innovar musicalmente con un estilo muy eclectico, fusionando muchos estilos y sonidos, pero siempre con un groove contundente, por el cual se caracteriza. </p>
 
-            Soulman Music, Nulogic Records, Noir Music, Starlight, Dataworx Digital, Presslab, Muzik X-Press…Estos son solo algunos de los muchos sellos que ha publicado su propia música, consiguiendo en repetidas ocasiones colarse en el top 100 de deep house y tech house de Beatport, También resaltar su papel como dj, ya que ha pinchado en numerosos clubs a nivel nacional causando muy buenas reacciones por parte del público.
+        <p>Soulman Music, Nulogic Records, Noir Music, Starlight, Dataworx Digital, Presslab, Muzik X-Press…Estos son solo algunos de los muchos sellos que ha publicado su propia música, consiguiendo en repetidas ocasiones colarse en el top 100 de deep house y tech house de Beatport, También resaltar su papel como dj, ya que ha pinchado en numerosos clubs a nivel nacional causando muy buenas reacciones por parte del público. </p>
             
-            Actualmente posee su propio sello Discográfico: Pura Music, que desde su inicio está causando una gran aceptación por parte de grandes djs y profesionales de la música a nivel mundial.
+        <p>Actualmente posee su propio sello Discográfico: Pura Music, que desde su inicio está causando una gran aceptación por parte de grandes djs y profesionales de la música a nivel mundial. </p>
             
-            Su objetivo para este año es continuar evolucionando y creando buena música para todo el mundo.  </p>
+        <p>Su objetivo para este año es continuar evolucionando y creando buena música para todo el mundo.  </p>
 
     </section>
 
